--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -51,11 +51,11 @@
         android:id="@+id/bLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/etPasswordLoginStudent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="151dp"
-        android:layout_marginBottom="182dp"
-        android:text="Login"
-        />
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginBottom="192dp"
+        android:text="Login" />
 
 </RelativeLayout>
