--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -58,4 +58,16 @@
         android:layout_marginBottom="192dp"
         android:text="Login" />
 
+    <TextView
+        android:id="@+id/tvGoToSignup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginEnd="111dp"
+        android:layout_marginBottom="131dp"
+        android:text="New User? Signup"
+        android:textSize="24sp" />
 </RelativeLayout>
