--- a/app/src/main/res/layout/new_outpass.xml
+++ b/app/src/main/res/layout/new_outpass.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -95,6 +95,17 @@
             android:layout_marginStart="140dp"
             android:layout_marginTop="198dp"
             android:text="Create outpass" />
+
+        <EditText
+            android:id="@+id/etLeaveDateCardOutpass"
+            android:layout_width="74dp"
+            android:layout_height="22dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="138dp"
+            android:layout_marginBottom="603dp"
+            android:ems="10"
+            android:inputType="date" />
 
 
     </RelativeLayout>
