--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_login_student"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8BC34A"
-    android:orientation="horizontal"
+    android:gravity="top"
+    android:paddingLeft="100dp"
+    android:paddingTop="150dp"
+    android:orientation="vertical"
     tools:context=".LoginStudentFragment">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+
+        android:fontFamily="sans-serif-black"
+        android:text="Digital Outpass"
+        android:textSize="30sp" />
 
     <EditText
         android:id="@+id/etEmailLoginStudent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="71dp"
-        android:layout_marginEnd="100dp"
-        android:ems="10"
+
         android:hint="Enter email"
         android:inputType="textPersonName" />
 
@@ -27,25 +39,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="316dp"
-        android:layout_marginEnd="102dp"
-        android:ems="10"
+
         android:hint="Enter password"
         android:inputType="textPassword" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="97dp"
-        android:layout_marginTop="122dp"
-        android:layout_marginEnd="106dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Digital Outpass"
-        android:textSize="30sp" />
+
 
     <Button
         android:id="@+id/bLogin"
@@ -53,10 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etPasswordLoginStudent"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="152dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginBottom="192dp"
-        android:text="Login" />
+                android:text="Login" />
 
     <TextView
         android:id="@+id/tvGoToSignup"
@@ -65,9 +60,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="106dp"
-        android:layout_marginEnd="111dp"
-        android:layout_marginBottom="131dp"
+
         android:text="New User? Signup"
         android:textSize="24sp" />
-</RelativeLayout>
+</LinearLayout>
