--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,7 +8,7 @@
     android:id="@+id/SSConstraintLayout">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvLabel"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="118dp"
