--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -17,6 +17,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="71dp"
         android:layout_marginEnd="100dp"
+        android:drawableStart="@drawable/email"
+        android:drawablePadding="5dp"
         android:ems="10"
         android:hint="Enter email"
         android:inputType="textPersonName" />
@@ -29,6 +31,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="316dp"
         android:layout_marginEnd="102dp"
+        android:drawableStart="@drawable/password_lock"
+        android:drawablePadding="5dp"
         android:ems="10"
         android:hint="Enter password"
         android:inputType="textPassword" />
