--- a/app/src/main/res/layout/fragment_signup_student.xml
+++ b/app/src/main/res/layout/fragment_signup_student.xml
@@ -104,6 +104,30 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvHostel"
+            android:text="Hostel"/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spHostelStudent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+
+            android:hint="Hostel"
+            android:spinnerMode="dropdown"/>
+
+
+    </LinearLayout>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -114,6 +138,8 @@
         android:ems="10"
         android:hint="Phone Number"
         android:inputType="number"/>
+
+
 
     <Button
         android:id="@+id/bSignupStudent"
