Warden merged with student

--- a/app/src/main/res/layout/card_outpass.xml
+++ b/app/src/main/res/layout/card_outpass.xml
@@ -92,7 +92,10 @@
             android:layout_marginTop="147dp"
             android:text="Return Date" />
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvStudentName"/>
 
 
 
