--- a/app/src/main/res/layout/card_outpass.xml
+++ b/app/src/main/res/layout/card_outpass.xml
@@ -9,6 +9,17 @@
     android:layout_marginVertical="12dp"
     app:cardElevation="12dp"
     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:id="@+id/cardId"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -93,14 +104,18 @@
             android:text="Return Date" />
 
         <TextView
+            android:id="@+id/tvStudentName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvStudentName"/>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="176dp" />
 
 
 
     </RelativeLayout>
-
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
