--- a/app/src/main/res/layout/fragment_signup_student.xml
+++ b/app/src/main/res/layout/fragment_signup_student.xml
@@ -4,17 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="100dp"
-    android:paddingTop="150dp"
-    android:gravity="top"
+    android:gravity="center_horizontal|center"
     tools:context=".SignupStudentFragment">
 
     <EditText
         android:id="@+id/etNameStudent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
 
 
         android:ems="10"
