--- a/app/src/main/res/layout/activity_warden.xml
+++ b/app/src/main/res/layout/activity_warden.xml
@@ -4,30 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:openDrawer="start"
     tools:context=".WardenActivity"
     android:id="@+id/activity_warden_drawer_layout">
-    <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="100dp"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
-
-        <!--<android.support.v7.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="100dp"-->
-            <!--android:background="?attr/colorPrimary"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
-
-    <!--</android.support.design.widget.AppBarLayout>-->
-
-    <LinearLayout
-        android:id="@+id/warden_activity_container"
-        android:orientation="vertical"
+    <include
+        layout="@layout/app_bar_warden"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-    </LinearLayout>
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.NavigationView
         app:headerLayout="@layout/nav_header_warden"
@@ -35,8 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:fitsSystemWindows="true"
         app:menu="@menu/activity_warden_drawer"
-
         >
 
 
