My students fixed

--- a/app/src/main/res/layout/app_bar_warden.xml
+++ b/app/src/main/res/layout/app_bar_warden.xml
@@ -20,13 +20,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:id="@+id/warden_activity_container"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+    <include layout="@layout/content_warden" />
 
-    </LinearLayout>
+
 
 </LinearLayout>
