--- a/app/src/main/res/layout/fragment_login_student.xml
+++ b/app/src/main/res/layout/fragment_login_student.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#8BC34A"
+
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".LoginStudentFragment">
@@ -23,7 +24,7 @@
         android:id="@+id/etEmailLoginStudent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="20dp"
         android:drawableStart="@drawable/email"
         android:drawablePadding="5dp"
         android:ems="10"
@@ -49,15 +50,15 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etPasswordLoginStudent"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp"
+        android:text="Login" />
 
-        android:text="Login as Student" />
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/bloginAsWarden"-->
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bloginAsWarden"
-
-        android:text = "Login as Warden"/>
+        <!--android:text = "Login as Warden"/>-->
 
     <TextView
         android:id="@+id/tvGoToSignup"
