--- a/app/src/main/res/layout/new_outpass.xml
+++ b/app/src/main/res/layout/new_outpass.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/etFromCardOutpass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Enter the source"
+                android:hint="Enter source"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -50,7 +50,7 @@
                 android:id="@+id/etToCardOutpass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="Enter the distination"
+                android:hint="Enter distination"
 
                 android:inputType="textPersonName" />
         </LinearLayout>
@@ -66,9 +66,9 @@
                 android:id="@+id/tvLeaveDateLabelCardOutpass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
                 android:text="Leave date"
-                android:textSize="18sp"
-                android:layout_marginHorizontal="10dp"/>
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/etLeaveDateCardOutpass"
@@ -90,8 +90,10 @@
                 android:id="@+id/tvLeaveDateCardOutpass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Return Date"
-                android:layout_marginHorizontal="10dp"/>
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginLeft="2dp"
+                android:text=" Return Date"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/etReturnDateCardOutpass"
@@ -127,6 +129,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Create outpass" />
+            android:background="@drawable/button_shape"
+            android:text=" Generate Outpass "
+            android:textAllCaps="false"
+            android:textStyle="bold"
+
+            />
     </LinearLayout>
 </android.support.v7.widget.CardView>
