--- a/app/src/main/res/layout/request_items.xml
+++ b/app/src/main/res/layout/request_items.xml
@@ -40,34 +40,36 @@
 
         <TextView
             android:id="@+id/textViewName"
-            android:layout_width="124dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="131dp"
+            android:layout_height="78dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:autoSizeMaxTextSize="20sp"
             android:text="Name"
             android:textSize="24sp"
+            app:autoSizeTextType="uniform"
             app:fontFamily="sans-serif-medium"
-            app:layout_constraintBottom_toTopOf="@+id/textViewFrom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.472"
+            app:layout_constraintHorizontal_bias="0.489"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViewOutpassId"
             android:layout_width="93dp"
-            android:layout_height="33dp"
+            android:layout_height="28dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:gravity="center|center_horizontal|center_vertical"
             android:text="1234"
             android:textSize="20sp"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toTopOf="@+id/textViewTo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toEndOf="@+id/textViewName"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,28 +77,30 @@
             android:id="@+id/textViewLeavingDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="20dp"
+            android:drawableLeft="@drawable/settings_gear"
+            android:drawablePadding="4dp"
             android:text="Leaving Date"
             android:textSize="20sp"
             app:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toTopOf="@+id/deny"
             app:layout_constraintEnd_toStartOf="@+id/textViewReturnDate"
             app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toEndOf="@+id/StudentImage"
-            app:layout_constraintTop_toBottomOf="@+id/textViewFrom" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/StudentImage"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textViewReturnDate"
-            android:layout_width="132dp"
+            android:layout_width="124dp"
             android:layout_height="26dp"
             android:layout_marginStart="13dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="32dp"
+            android:drawableLeft="@drawable/settings_gear"
+            android:drawablePadding="4dp"
             android:text="Return Date"
             android:textSize="20sp"
             app:fontFamily="sans-serif-medium"
@@ -109,15 +113,15 @@
             android:layout_width="119dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:text="FROM"
             android:textSize="22sp"
             app:fontFamily="sans-serif-medium"
+            app:layout_constraintBottom_toTopOf="@+id/textViewLeavingDate"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.447"
+            app:layout_constraintHorizontal_bias="0.449"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewName" />
 
@@ -126,17 +130,14 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:text="TO"
             android:textSize="22sp"
             app:fontFamily="sans-serif-medium"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textViewFrom"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/textViewFrom"
-            app:layout_constraintTop_toBottomOf="@+id/textViewName" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/textViewFrom" />
 
         <Button
 
@@ -144,29 +145,22 @@
             android:layout_width="129dp"
             android:layout_height="37dp"
             android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="16dp"
             android:layout_marginEnd="19dp"
-            android:layout_marginRight="19dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="12dp"
             android:background="#EE0D0D"
             android:text="Deny"
             android:textColor="@android:color/white"
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/accept"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewLeavingDate"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/accept"
             android:layout_width="135dp"
             android:layout_height="36dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginRight="32dp"
             android:background=" #25CEA3"
             android:text="Accept"
             android:textSize="22sp"
